@@ -166,6 +166,9 @@ can exit with the following codes:
 0: all operations were successful.
 .RE
 .RS
+1: a usage error occurred.
+.RE
+.RS
 5: failed to download the tree.
 .RE
 .RS
