@@ -31,7 +31,10 @@ on a FreeBSD system. If the repository includes a
 TAGS.txt
 file, these tags are searched to generate additional results.
 .P
-If an invalid configuration is detected in
+Non-root users can call
+.B
+sbofind
+with any flags. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
 \&, the script exits with a diagnostic message.
