@@ -14,7 +14,7 @@
 use 5.16.0;
 use strict;
 use warnings FATAL => 'all';
-use SBO::Lib qw/ update_tree build_cmp get_available_updates get_removed_builds script_error open_fh is_local show_version get_local_outdated_versions $slackbuilds_txt slackbuilds_or_fetch verify_gpg lint_sbo_config version_cmp wrapsay %config /;
+use SBO::Lib qw/ update_tree build_cmp get_available_updates get_removed_builds script_error open_fh is_local show_version get_local_outdated_versions $slackbuilds_txt slackbuilds_or_fetch verify_gpg lint_sbo_config version_cmp usage_error wrapsay %config /;
 use Getopt::Long;
 use File::Basename;
 use List::Util 'max';
@@ -44,8 +44,16 @@ my ($help, $vers, $gpg, $nopull);
 
 GetOptions('help|h' => \$help, 'version|v' => \$vers, 'gpg-verify|g' => \$gpg, 'nopull|n' => \$nopull);
 
-if ($help) { show_usage(); exit 0 }
+if ($help) {
+	show_usage();
+	usage_error "This is a root-only script." unless $< == 0;
+	exit 0;
+}
 if ($vers) { show_version(); exit 0 }
+unless ($< == 0) {
+	show_usage();
+	usage_error "This is a root-only script.";
+}
 
 lint_sbo_config($self, %config);
 
