@@ -81,8 +81,16 @@ GetOptions(\%options, 'help|h', 'version|v', 'list|l', 'reset', 'classic|C=s', '
 	'local-overrides|o=s', 'slackware-version|V=s', 'repo|r=s',
     'build-ignore|b=s', 'branch|B=s', 'rsync|R=s', 'gpg-verify|g=s', 'strict-upgrades|S=s');
 
-if ($options{help}) { show_usage(); exit 0 }
+if ($options{help}) {
+	show_usage();
+	usage_error "Non-root users can only call sboconfig with -l, -h and -v." unless $< == 0;
+	exit 0;
+}
 if ($options{version}) { show_version(); exit 0 }
+unless ($< == 0 or $options{list}) {
+	show_usage();
+	usage_error "Non-root users can only call sboconfig with -l, -h and -v.";
+}
 
 my %valid_confs = (
 	classic             => 'CLASSIC',
