@@ -80,8 +80,16 @@ GetOptions(
 	'strict-upgrades|S=s' => \$strict_upgrades,
 );
 
-if ($help) { show_usage(); exit 0 }
+if ($help) {
+	show_usage();
+	usage_error "This is a root-only script." unless $< == 0;
+	exit 0;
+}
 if ($vers) { show_version(); exit 0 }
+unless ($< == 0) {
+	show_usage();
+	usage_error "This is a root-only script.";
+}
 
 lint_sbo_config($self, %config);
 
