@@ -16,10 +16,11 @@ SlackBuilds.org.
 
 sbotools installs a default configuration file to
 /etc/sbotools/sbotools.conf.new. sbotools.conf files from version 2.7
-are compatible, but some of the options are new. It may be convenient
-to examine the new file for added options and annotation when upgrading
-from version 2.7. Alternatively, run "sboconfig" without flags and
-options for an interactive menu with explanations for all settings.
+are compatible, but some of the options are new. The GPG_VERIFY
+setting introduced in sbotools2-2.8 is incompatible. It may be
+convenient to examine the new file for added options and annotation when
+upgrading from version 2.x. Alternatively, run "sboconfig" without flags
+and options for an interactive menu with explanations for all settings.
 
 To blacklist scripts and notify sbotools of optional dependencies, see
 /etc/sbotools/sbotools.hints or sbohints(1).
