@@ -73,6 +73,7 @@ find -L . \
 )
 
 SCRIPTS="check clean config find hints install remove upgrade"
+ANYONE="config find hints"
 MANS="man1 man3 man5"
 
 mkdir -p $PKG/usr/sbin \
@@ -83,6 +84,14 @@ for i in $SCRIPTS; do
   install -m 0644 completions/zsh/_sbo$i $PKG/usr/share/zsh/site-functions
   install -m 0644 completions/bash/sbo$i $PKG/usr/share/bash-completion/completions/sbo$i
 done
+# sbofind and some of sboconfig and sbohints can be used without root
+mkdir -p $PKG/usr/bin
+(
+cd $PKG/usr/bin
+for i in $ANYONE; do
+  ln -s ../sbin/sbo$i $PKG/usr/bin
+done
+)
 
 # sbosnap compatibility completions
 install -m 0644 completions/zsh/_sbosnap $PKG/usr/share/zsh/site-functions
